--- a/compose/todo.html
+++ b/compose/todo.html
@@ -133,6 +133,14 @@
             </label>
         </div>
 
+        <div class="todo-item">
+            <input type="checkbox" id="item10" class="todo-checkbox">
+            <label for="item10" class="todo-label">
+                Swipe to Dismiss App
+                <a target="_blank" href="../compose/pages/page_animation.html">See this Page</a>
+            </label>
+        </div>
+
     </div>
 
     <div> <hr> </div>
