--- a/compose/notes.html
+++ b/compose/notes.html
@@ -31,7 +31,9 @@
     </style>
 </head>
 <body>
-    <h1 style="display: inline;">Compose Notes </h1>
+    <h1 style="display: inline;">
+        <a href="../compose/app/code/Test.html">Compose</a>
+        Notes</h1>
     <p style="display: inline;"> (Ref. https://developer.android.com)</p>
 
     <hr>
