top-bottom app bar, compose update, index file

--- a/compose/notes.html
+++ b/compose/notes.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <h1 style="display: inline;">
-        <a href="../compose/app/code/Test.html">Compose</a>
+        <a href="app/code/xTest.html">Compose</a>
         Notes</h1>
     <p style="display: inline;"> (Ref. https://developer.android.com)</p>
 
