--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1 class="header-heading">Jetpack Compose</h1>
+        <p>Note: Site only for Lapy/PC,!for Mobile, Tab,</p>
         <div>
             <a class="menu" href="compose/todo.html" id="todoLink">To-Do</a>
             <a class="menu" href="compose/notes.html" id="notesLink">Notes</a>
@@ -21,6 +22,12 @@
 
     <div class="container">
 
+        <div class="card">
+            <a href="compose/pages/page_compose_m3.html">
+                <h2>Compose M3</h2>
+                <p>Compose M3 Component, App Contains</p>
+            </a>
+        </div>
 
         <div class="card">
             <a href="compose/pages/page_widgets.html">
