--- a/compose/pages/page_compose_m3.html
+++ b/compose/pages/page_compose_m3.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Website</title>
+    <link rel="stylesheet" type="text/css" href="../styles/styles.css">
 </head>
+
 <body>
-$END$
+<header>
+    <h1 class="header-heading">Jetpack Compose</h1>
+    <div>
+        <a class="menu" href="../todo.html" id="todoLink">To-Do</a>
+        <a class="menu" href="../notes.html" id="notesLink">Notes</a>
+        <a class="menu selected" href="../../index.html" id="composeLink">Compose</a>
+        <a class="menu" href="../../profile/index.html" id="profileLink">Profile</a>
+
+    </div>
+</header>
+
+<div class="container">
+
+    <div class="card">
+        <a href="page_app_bar.html">
+            <h2>AppBar</h2>
+            <p>Top &amp; Bottom Appbar in Jetpack Compose</p>
+        </a>
+    </div>
+
+
+    <!-- Add more cards as needed -->
+</div>
+
+<script>
+    const profileLink = document.getElementById("profileLink");
+    const composeLink = document.getElementById("composeLink");
+    const headerHeading = document.querySelector(".header-heading");
+
+    profileLink.addEventListener("click", () => {
+        profileLink.classList.add("selected");
+        composeLink.classList.remove("selected");
+        headerHeading.textContent = "Akshay's Profile";
+    });
+
+    composeLink.addEventListener("click", () => {
+        composeLink.classList.add("selected");
+        profileLink.classList.remove("selected");
+        headerHeading.textContent = "Jetpack Compose";
+    });
+</script>
 </body>
 </html>
