--- a/compose/app/code/TopAppBar1.html
+++ b/compose/app/code/TopAppBar1.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sample</title>
+    <title>Top App bar in Compose</title>
 
     <style>
         pre {
