--- a/compose/app/code/xTest.html
+++ b/compose/app/code/xTest.html
@@ -1,20 +1,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sample</title>
+    <title>Badge in compose</title>
 
     <style>
         pre {
-   background-color: #fff9e6;
-   border: 1px solid #ccc;
-   display: inline-block;
-   border-radius: 6px;
-   padding: 5px; /* Adjust padding as needed */
-   font-family: monospace; /* Use a monospaced font for code */
- }
-
+          background-color: #fff9e6;
+          border: 1px solid #ccc;
+          display: inline-block;
+          border-radius: 6px;
+          padding: 5px; /* Adjust padding as needed */
+          font-family: monospace; /* Use a monospaced font for code */
+        }
     </style>
 </head>
+
 <body>
 <pre>
 
