--- a/compose/pages/page_compose_m3.html
+++ b/compose/pages/page_compose_m3.html
@@ -19,15 +19,64 @@
     </div>
 </header>
 
+<div style="text-align: center;">
+    <p>Download <b>M3 Compose</b> App</p>
+    <p style="font-size:12px;">From Indus App Store &amp; PlayStore (soon)</p>
+</div>
+
+
 <div class="container">
 
+
     <div class="card">
-        <a href="page_app_bar.html">
+        <a href="page_m3_app_bar.html">
             <h2>AppBar</h2>
-            <p>Top &amp; Bottom Appbar in Jetpack Compose</p>
+            <p>Top &amp; Bottom, Menu, Nav, Sheet, Slider,Tab</p>
         </a>
     </div>
 
+
+    <div class="card">
+        <a href="page_m3_badge.html">
+            <h2>Badge</h2>
+            <p>Small Dot or numbers on icons</p>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="page_m3_buttons.html">
+            <h2>Button</h2>
+            <p>Different Buttons in M3 Compose</p>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="page_m3_card.html">
+            <h2>Card</h2>
+            <p>Default, Outline, Elevated, Filled Card</p>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="page_m3_picker.html">
+            <h2>Pickers</h2>
+            <p>Date, Date Range, Time, Slider</p>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="page_m3_show.html">
+            <h2>To Show</h2>
+            <p>Prompt use from Dialog, Snack, Tooltip, progress</p>
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="page_m3_other.html">
+            <h2>Other</h2>
+            <p>Checkbox, Chip, SearchBox, TextField</p>
+        </a>
+    </div>
 
 
     <!-- Add more cards as needed -->
