--- a/compose/todo.html
+++ b/compose/todo.html
@@ -80,29 +80,6 @@
 
     <div id="todoList">
 
-        <div class="todo-item">
-            <input type="checkbox" id="item0" class="todo-checkbox">
-            <label for="item0" class="todo-label">All Widget of android
-                <a target="_blank" href="https://raw.githubusercontent.com/pwraxe/Android-in-Kotlin/master/Jetpack%20Compose/AndroidWidget.png">
-                    (See this XML Layout/Design Tab/Palette)
-                </a>
-            </label>
-        </div>
-
-        <div class="todo-item">
-            <input type="checkbox" id="item1" class="todo-checkbox">
-            <label for="item1" class="todo-label">Show List like RecyclerView, OnClick Event on Each Item</label>
-        </div>
-
-        <div class="todo-item">
-            <input type="checkbox" id="item2" class="todo-checkbox">
-            <label for="item2" class="todo-label">Show multiple RadioButton in list (min-5), Show Checked text</label>
-        </div>
-
-        <div class="todo-item">
-            <input type="checkbox" id="item3" class="todo-checkbox">
-            <label for="item3" class="todo-label">Try to show multiple same ui in list and add listener</label>
-        </div>
 
         <div class="todo-item">
             <input type="checkbox" id="item5" class="todo-checkbox">
@@ -133,13 +110,7 @@
             </label>
         </div>
 
-        <div class="todo-item">
-            <input type="checkbox" id="item10" class="todo-checkbox">
-            <label for="item10" class="todo-label">
-                Swipe to Dismiss App
-                <a target="_blank" href="../compose/pages/page_animation.html">See this Page</a>
-            </label>
-        </div>
+
 
     </div>
 
@@ -155,6 +126,35 @@
         <div class="todo-item">
             <input type="checkbox" id="item4" class="todo-checkbox" checked disabled>
             <label for="item4" class="todo-label done">Pizza Order,With NavHost,Update Multiple Screen on uiState Change</label>
+        </div>
+
+        <div class="todo-item">
+            <input type="checkbox" id="item0" class="todo-checkbox" checked disabled>
+            <label for="item0" class="todo-label done">All Widget of android
+                <a target="_blank" href="https://raw.githubusercontent.com/pwraxe/Android-in-Kotlin/master/Jetpack%20Compose/AndroidWidget.png">
+                    (See this XML Layout/Design Tab/Palette)
+                </a>
+            </label>
+        </div>
+
+
+        <div class="todo-item">
+            <input type="checkbox" id="item1" class="todo-checkbox" checked disabled>
+            <label for="item1" class="todo-label done">Show List like RecyclerView, OnClick Event on Each Item</label>
+        </div>
+
+        <div class="todo-item">
+            <input type="checkbox" id="item2" class="todo-checkbox" checked disabled>
+            <label for="item2" class="todo-label done">Show multiple RadioButton in list (min-5), Show Checked text</label>
+        </div>
+
+
+        <div class="todo-item">
+            <input type="checkbox" id="item10" class="todo-checkbox" checked disabled>
+            <label for="item10" class="todo-label done">
+                Swipe to Dismiss App
+                <a target="_blank" href="../compose/pages/page_animation.html">See this Page</a>
+            </label>
         </div>
 
     </div>
