--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="card">
             <a href="compose/pages/page_compose_m3.html">
-                <h2>Compose M3</h2>
+                <h2>M3 Compose</h2>
                 <p>Compose M3 Component, App Contains</p>
             </a>
         </div>
