deprecated, new soon in compose

--- a/profile/index.html
+++ b/profile/index.html
@@ -862,29 +862,16 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6 order-2 order-lg-1">
                             <div class="hero-content">
-                                <h1 class="mb-3">Hello There,</h1>
+                                <h1 class="mb-3">@Deprecated, New Soon</h1>
                                 <h4 class="text-capitalize mb-0"><span class="base-color"></span> <span
-                                        class="element" data-elements="It's a Akshay Pawar, A Sr. Android Developer"></span></h4>
+                                        class="element" data-elements="Working on New Website,In Jetpack Compose, Kotlin Multiplatform"></span></h4>
                                 <p class="max-width-450 mx-0 my-4">
-                                    I am a <span
-                                        style="font-size:8mm;font-family: 'Montserrat', sans-serif;">passionate</span>
-                                    and skilled <span style="font-size:8mm;font-family: 'Montserrat', sans-serif;">Android</span>
-                                    developer with a strong interest in the latest technologies, such as <span
-                                        style="font-size:8mm;font-family: 'Montserrat', sans-serif;">Kotlin</span>.
-                                    I am currently working as a <span
-                                        style="font-size:8mm;font-family: 'Montserrat', sans-serif;">Senior</span>
-                                    Android <span
-                                        style="font-size:8mm;font-family: 'Montserrat', sans-serif;">Developer</span>,
-                                    and I am excited to be pursuing my goal of becoming a <span
-                                        style="font-size:8mm;font-family: 'Montserrat', sans-serif;">Professional</span>
-                                    Android developer at the <span
-                                        style="font-size:8mm;font-family: 'Montserrat', sans-serif;">Parent</span>
-                                    company.
-                                    I am confident that the <span
-                                        style="font-size:8mm;font-family: 'Montserrat', sans-serif;">Skills</span> and
-                                    <span style="font-size:8mm;font-family: 'Montserrat', sans-serif;">experience</span>
-                                    I have gained in my current role will prepare me well for the next stage of my <span
-                                        style="font-size:8mm;font-family: 'Montserrat', sans-serif;">career</span>.
+
+                                    I am a passionate and skilled Android developer with a strong interest in the latest technologies,
+                                    such as Kotlin. I am currently working as a Senior Android Developer, and I am excited to be pursuing
+                                    my goal of becoming a Professional Android developer at the Parent company. I am confident that the Skills
+                                    and experience I have gained in my current role will prepare me well for the next stage of my career.
+
                                 </p>
                                 <ul class="list-inline hero-social">
                                     <li class="list-inline-item">
@@ -1279,10 +1266,16 @@
                                     <div class="skill-bar-percent">45%</div>
                                 </div>
 
-                                <div class="skillbar clearfix" data-percent="10%">
+                                <div class="skillbar clearfix" data-percent="80%">
                                     <div class="skillbar-title"><span>Jetpack Compose</span></div>
                                     <div class="skillbar-bar fill-skillbar data-background" data-color="#00FFFF"></div>
-                                    <div class="skill-bar-percent">10%</div>
+                                    <div class="skill-bar-percent">80%</div>
+                                </div>
+
+                                <div class="skillbar clearfix" data-percent="60%">
+                                    <div class="skillbar-title"><span>DSA</span></div>
+                                    <div class="skillbar-bar fill-skillbar data-background" data-color="#DF3068"></div>
+                                    <div class="skill-bar-percent">60%</div>
                                 </div>
                             </div>
                         </div>
